--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+a {
+  color: black;
+}
+
+a:hover {
+  color: #7a66ff;
+}
